--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
   "contributors": [
     "Giovanni Bruno <giovanni.bruno@soluzionifutura.it>"
   ],
-  "scripts": {
-    "test": "gulp invoke-local",
-    "postinstall": "gulp install"
+  "bin": {
+    "valk": "./bin/valk"
   },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/giowe/aws-valkyrie-cli.git"
   },
   "license": "ISC",
   "main": "main.js",
-  "dependencies": {},
-  "devDependencies": {
-    "eslint": "^4.2.0",
+  "dependencies": {
     "aws-cwlogs": "2.3.0",
     "aws-sdk": "^2.85.0",
-    "inquirer": "^3.2.0",
+    "inquirer": "^3.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.2.0"
   },
   "bugs": {
     "url": "https://github.com/giowe/aws-valkyrie-cli/issues"
