--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aws-cwlogs": "2.3.0",
     "aws-sdk": "^2.85.0",
     "inquirer": "^3.2.0",
+    "request": "^2.81.0",
     "require-dir": "^0.3.2"
   },
   "devDependencies": {
