--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   "license": "ISC",
   "main": "main.js",
   "dependencies": {
-    "aws-cwlogs": "2.3.0",
+    "aws-cwlogs": "^2.3.0",
     "aws-sdk": "^2.112.0",
     "inquirer": "^3.2.0",
     "request": "^2.81.0",
-    "require-dir": "^0.3.2"
+    "require-dir": "^0.3.2",
+    "valkyrie-scaffolder-default": "^0.0.1"
   },
   "devDependencies": {
     "eslint": "^4.2.0"
