--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "main": "main.js",
   "dependencies": {
+    "aws-cwlogs": "^2.3.3",
     "aws-sdk": "^2.124.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -24,7 +25,6 @@
     "request": "^2.83.0",
     "require-dir": "^0.3.2",
     "valkyrie-scaffolder-default": "^1.0.1",
-    "yargs": "^9.0.1",
     "zip-dir": "^1.0.2"
   },
   "devDependencies": {
