--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-valkyrie-cli",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "",
   "author": "Giovanni Bruno",
   "contributors": [
@@ -19,6 +19,7 @@
   "dependencies": {
     "aws-cwlogs": "^2.4.1",
     "aws-sdk": "^2.124.0",
+    "cli-spinner": "^0.2.6",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "inquirer": "^3.3.0",
