--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,7 @@
     "no-undef": ["error"],
     "no-unused-vars": ["warn"],
     "no-console": ["warn"],
-    "object-curly-spacing": ["error", "always"],
+    "object-curly-spacing": ["error", "never"],
     "object-shorthand": "error",
     "prefer-const": 2,
     "quotes": ["error", "single"],
