--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "inquirer": "^3.3.0",
+    "minimatch": "^3.0.4",
     "request": "^2.83.0",
     "require-dir": "^0.3.2",
     "simple-argv": "^1.0.0",
