--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-valkyrie-cli",
-  "version": "0.12.2",
+  "version": "0.12.3",
   "description": "",
   "author": "Giovanni Bruno",
   "contributors": [
@@ -20,6 +20,7 @@
     "aws-apigateway-proxy-local": "^0.2.0",
     "aws-cwlogs": "^2.5.0",
     "aws-sdk": "^2.141.0",
+    "aws-valkyrie-utils": "^1.0.0",
     "body-parser": "^1.18.2",
     "cli-spinner": "^0.2.7",
     "compare-versions": "^3.1.0",
