--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "browser": true,
     "es6": true
   },
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2017,
     "sourceType": "module"
@@ -22,11 +23,13 @@
     "no-undef": ["error"],
     "no-unused-vars": ["warn"],
     "no-console": ["warn"],
-    "object-curly-spacing": ["error", "never"],
+    "object-curly-spacing": ["error", "always"],
     "object-shorthand": "error",
     "prefer-const": 2,
-    "quotes": ["error", "single"],
-    "semi": ["warn", "always"],
-    "space-in-parens": ["error", "never"]
+    "quotes": ["error", "double"],
+    "semi": ["error", "never"],
+    "space-in-parens": ["error", "never"],
+    "array-bracket-spacing": ["error", "never"],
+    "space-infix-ops": ["error"]
   }
 }
