--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "aws-sdk": "^2.302.0",
     "body-parser": "^1.18.3",
     "cli-spinner": "^0.2.8",
+    "cli-table": "^0.3.1",
     "compare-versions": "^3.3.1",
     "deep-assign": "^2.0.0",
     "del": "^3.0.0",
